# BedrockModdingExperiments

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
inc/Items/: Item.h  ItemDefinition.h  ItemRegistry.h  VanillaItems.h
inc/Minecraft/Blocks/: Block.h  BlockDefinitionGroup.h  BlockLegacy.h  BlockTypeRegistry.h
inc/Minecraft/Items/: Item.h  ItemRegistry.h  ItemStackBase.h  VanillaItems.h
inc/Minecraft/NBT/: CompoundTag.h  Tag.h
inc/Minecraft/Util/: Vec.h
maps/: BlockLegacy.json  CompoundTag.json  Item.json  ItemRegistry.json  ItemStackBase.json  SymbolMap.json  Tag.json
resources/: modinfo.json
resources/assets/: README.md  blocks.json  manifest.json
resources/assets/texts/: en_US.lang
resources/assets/textures/: item_texture.json  terrain_texture.json
resources/assets/ui/: inventory_screen.json
resources/data/: README.md
src/: BlockEntry.h  Example.cpp  ItemDefinition.h  ItemEntry.h  ModRegistry.h
src/Blocks/: TestBlock.cpp  TestBlock.h
src/Items/: TestItem.cpp  TestItem.h  TestItem2.cpp  TestItem2.h
